setting up dev environment

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,184 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f8f9fa;
 }
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  /* Font family */
+  --font-poppins: Poppins, sans-serif;
+  --font-inter: Inter, sans-serif;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* Colors */
+  --color-background: #f8f9fa;
+  --color-banner: #506d37;
+  --color-primary: #041107;
+  --color-secondary: #2b9e3b;
+  --color-accent: #e8f9f1;
+  --color-accent2: #d9f3d8;
+  --color-cardBg: #e5e5e5;
+  --color-tertiary: #e5e5e5;
+  --color-tertiary-30: rgba(229, 229, 229, 0.3);
+  --color-tertiary-white: #1e2915;
+  --color-error: hsl(5, 85%, 63%);
+  --color-active-link: #4eb959;
+  --color-default-link: #b3e7b3;
+  --color-hover-link: #81d487;
+  --color-button-login-default: #2b9e3b;
+  --color-button-login-hover: #1c7f2b;
+  --color-button-login-active: #176526;
+  --color-button-login-disabled: #d9f3d8;
+  --color-button-textColor: #f8f9fa;
+  --color-button-textColor-disabled: #4eb959;
+  --color-button-textColor-hover: #f8f9fa;
+  --color-button-signout: #effaef;
+  --color-notificationBg: #151a234d;
+  --color-notification-hovered: #151a232d;
+
+  /* Status color */
+  --color-status-pending: #233bb2;
+  --color-status-active: #d9f3d8;
+  --color-status-completed: #b3e7b3;
+  --color-status-cancelled: #b26623;
+  --color-status-failed: #4eb959;
+
+  /* Font sizes */
+  --text-display: 2.25rem;
+  --text-headline: 1.5rem;
+  --text-title: 0.875rem;
+  --text-p: 0.75rem;
+
+  /* Responsive font sizes */
+  --text-display-sm: 2.4125rem;
+  --text-display-md: 2.7875rem;
+  --text-display-lg: 2.8625rem;
+
+  --text-headline-sm: 1.65rem;
+  --text-headline-md: 1.775rem;
+  --text-headline-lg: 1.8rem;
+
+  --text-title-sm: 1rem;
+  --text-title-md: 1.1875rem;
+  --text-title-lg: 1.375rem;
+
+  --text-p-sm: 0.875rem;
+  --text-p-md: 0.9375rem;
+  --text-p-lg: 1rem;
+
+  --text-label-lg: 0.875rem;
+  --text-label-md: 0.75rem;
+  --text-label-sm: 0.6875rem;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn {
+  @apply px-6 py-4 rounded-lg font-medium text-sm transition-colors;
+  background-color: var(--color-button-login-default);
+  color: var(--color-button-textColor);
+}
+
+.btn:hover {
+  background-color: var(--color-button-login-hover);
+  color: var(--color-button-textColor-hover);
+}
+
+.btn:active {
+  background-color: var(--color-button-login-active);
+}
+
+.btn:disabled {
+  background-color: var(--color-button-login-disabled);
+  color: var(--color-button-textColor-disabled);
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
+/* Define custom utilities */
+
+@layer utilities {
+  .display {
+    font-size: var(--text-display);
+    font-weight: bold;
+
+    @media (min-width: 640px) {
+      font-size: var(--text-display-sm);
+    }
+
+    @media (min-width: 768px) {
+      font-size: var(--text-display-md);
+    }
+
+    @media (min-width: 1024px) {
+      font-size: var(--text-display-lg);
+    }
+  }
+
+  .headline {
+    font-size: var(--text-headline);
+    font-weight: medium;
+
+    @media (min-width: 640px) {
+      font-size: var(--text-headline-sm);
+    }
+
+    @media (min-width: 768px) {
+      font-size: var(--text-headline-md);
+    }
+
+    @media (min-width: 1024px) {
+      font-size: var(--text-headline-lg);
+    }
+  }
+
+  .title {
+    font-size: var(--text-title);
+    font-weight: medium;
+
+    @media (min-width: 640px) {
+      font-size: var(--text-title-sm);
+    }
+
+    @media (min-width: 768px) {
+      font-size: var(--text-title-md);
+    }
+
+    @media (min-width: 1024px) {
+      font-size: var(--text-title-lg);
+    }
+  }
+
+  .p-text {
+    font-size: var(--text-p);
+    font-weight: normal;
+
+    @media (min-width: 640px) {
+      font-size: var(--text-p-sm);
+    }
+
+    @media (min-width: 768px) {
+      font-size: var(--text-p-md);
+    }
+
+    @media (min-width: 1024px) {
+      font-size: var(--text-p-lg);
+    }
+  }
+  .label-text {
+    font-size: var(--text-label-sm);
+    font-weight: normal;
+
+    @media (min-width: 640px) {
+      font-size: var(--text-label-md);
+    }
+
+    @media (min-width: 768px) {
+      font-size: var(--text-label-lg);
+    }
+  }
 }
