--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
-
 @theme inline {
   --color-background: var(--background);
   /* Font family */
@@ -10,14 +9,14 @@
   /* Colors */
   --color-background: #f8f9fa;
   --color-banner: #506d37;
-  --color-primary: #041107;
-  --color-secondary: #e2ebf3;
+  --color-primary: #040811;
+  --color-secondary: #2dbf50;
   --color-accent: #e8f9f1;
   --color-accent2: #d9f3d8;
   --color-cardBg: #e5e5e5;
-  --color-cardBg-support1: #FFEEEB;
-  --color-cardBg-support2: #B2D7FF;
-  --color-cardBg-support3: #E8F9F1;
+  --color-cardBg-support1: #ffeeeb;
+  --color-cardBg-support2: #b2d7ff;
+  --color-cardBg-support3: #e8f9f1;
 
   --color-tertiary: #e5e5e5;
   --color-tertiary-30: rgba(229, 229, 229, 0.3);
@@ -70,7 +69,6 @@
   --text-label-lg: 0.875rem;
   --text-label-md: 0.75rem;
   --text-label-sm: 0.6875rem;
-
 }
 
 .btn {
