--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@theme {
+  --breakpoint-xs: 30rem;
+  --breakpoint-2xl: 100rem;
+  --breakpoint-3xl: 120rem;
+}
 
 @theme inline {
   --color-background: var(--background);
