--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
   --breakpoint-2xl: 100rem;
   --breakpoint-3xl: 120rem;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 @theme inline {
   --color-background: var(--background);
@@ -218,7 +221,6 @@
   background-color: #4ade80;
   border-radius: 3px;
 }
-
 
 /* Custom carousel styles */
 .carousel-container {
